--- a/src/app/components/khaled/khaled.component.html
+++ b/src/app/components/khaled/khaled.component.html
@@ -3,3 +3,5 @@
 <h1>{{lname}}</h1>
 <h1>{{age}}</h1>
 <h1>{{employee.name}},{{employee.lname}},{{employee.age}}</h1>
+<h1>{{adress}}</h1>
+<h1>{{infos}}</h1>
