--- a/src/app/components/my-component/my-component.component.html
+++ b/src/app/components/my-component/my-component.component.html
@@ -7,7 +7,7 @@
 <div class="container">
 <ul>
   <li *ngFor="let item of users">
-    {{item}}
+    {{item.id}}-{{item.name}}-{{item.email}}
   </li>
 </ul>
 
