--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-khaled
+<h6>
+	Welcome to {{ 'TITLE' | translate }}!
+</h6>
+<div>
+	<button (click)="setLang('ua')">UA</button>
+</div>
+<br>
+<div>
+  <button (click)="setLang('en')">EN</button>
+ </div>
